# agent-token-tracker

./: .gitignore  Cargo.toml  RELEASE.md
.claude/: settings.json
.github/workflows/: release.yml
docs/spikes/: issue-681-codex-rollout-schema.md  issue-682-antigravity-protobuf-poc.md  issue-683-graceful-degrade-policy.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  MainApp.tsx  globals.css  index.css  main.tsx  types.ts
frontend/src/components/: AgentQuotaCard.tsx  LoopDirectionViewer.tsx  McpTrendChart.tsx  SessionDrawer.tsx  SplineChart.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/dev/: tauriMock.ts
frontend/src/hooks/: useAppUpdate.ts  useCalendarData.ts  useDbInvalidation.ts  useMcpServer.ts  useSessionDetails.ts  useTrackerData.ts
frontend/src/hooks/mutations/: useMalfunctionMutations.ts  useSettingsMutations.ts  useSyncMutations.ts
frontend/src/hooks/queries/: useDbQueries.ts  useQuotaQuery.ts  useSettingsDiagnostics.ts  useSettingsQuery.ts
frontend/src/lib/: dbUpdateBus.ts  queryClient.ts  queryConfig.ts  queryKeys.ts
frontend/src/utils/: calendar.ts  formatters.test.ts  formatters.ts
frontend/src/views/: CalendarView.tsx  DashboardView.tsx  McpGuideView.tsx  McpServerView.tsx  SessionAnalysisView.tsx  SettingsView.tsx  TrayPopoverView.tsx
plugins/atk/docs/: atk_malfunction_enhancement.md
scratch/: test_anomaly_seeding.sql  test_search_session.jsonl
scripts/: cross_check.sh
src/: cross_check.rs  db.rs  lib.rs  main.rs  model.rs  pricing.rs  tui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: sync_db.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/adapters/: antigravity.rs  claude_code.rs  codex.rs  ingest.rs  mod.rs
src/detect/: loops.rs  malfunctions.rs  mod.rs
src/mcp/: mod.rs  server.rs  types.rs
src/mcp/tools/: mod.rs
tests/: fixture_tests.rs  loop_tests.rs  malfunction_tests.rs
tests/fixtures/: README.md  antigravity_trajectory_summaries.txt  claude_code_basic.jsonl  claude_code_multi_turn.jsonl  claude_code_thinking.jsonl  codex_basic.jsonl  codex_patch.jsonl  loop_anomaly_free.jsonl  loop_ping_pong.jsonl  loop_real_anonymized.jsonl  loop_repeated_calls.jsonl  loop_repeated_failures.jsonl  loop_token_inflation.jsonl
