[package]
name = "agent-token-tracker"
version = "0.2.2"
edition = "2021"

# 라이브러리 크레이트 (통합 테스트에서 `use agent_token_tracker::...` 가능)
[lib]
name = "agent_token_tracker"
path = "src/lib.rs"

# 바이너리 크레이트
[[bin]]
name = "agent-token-tracker"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
memchr = "2.7"
rusqlite = { version = "0.32", features = ["bundled"] }
prost = "0.13"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.27"
crossterm = "0.27"
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
blake3 = "1.5"
notify = "6.1.1"
# MCP 서버 의존성
rmcp = { version = "2.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"

[features]
default = []
fts = []
mcp = []

