[package]
name = "atk-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6.1.1"
agent-token-tracker = { path = ".." }
keyring = "3.2.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
