[package]
name = "atk-desktop"
version = "0.3.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6.1.1"
agent-token-tracker = { path = ".." }
keyring = "3.2.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
cocoa = "0.26"
objc = "0.2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
